# node-gdal-async

./: .gitignore  CMakeLists.txt  Makefile  README.md  ROADMAP.md  binding.gyp  conanfile.py  package-lock.json  package.json  tsconfig.json  vcpkg-configuration.json  vcpkg.json
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: publish.yml  test-dev.yml  test-npm.yml  test-release.yml
conan/profiles/: linux-x86_64-release  macos-arm64-release  macos-x86_64-release  windows-x86_64-release
conan/recipes/gdal/: conandata.yml  conanfile.py  conanmanifest.txt
lib/: gdal.js  index.d.ts
scripts/: install.js
src/: async_napi.hpp  gdal_algebra_napi.cpp  gdal_algebra_napi.hpp  gdal_algorithms_napi.cpp  gdal_algorithms_napi.hpp  gdal_common_napi.hpp  gdal_coordinate_transformation_napi.cpp  gdal_coordinate_transformation_napi.hpp  gdal_dataset_napi.cpp  gdal_dataset_napi.hpp  gdal_driver_napi.cpp  gdal_driver_napi.hpp  gdal_feature_defn_napi.cpp  gdal_feature_defn_napi.hpp  gdal_feature_napi.cpp  gdal_feature_napi.hpp  gdal_field_defn_napi.cpp  gdal_field_defn_napi.hpp  gdal_layer_napi.cpp  gdal_layer_napi.hpp  gdal_memfile_napi.cpp  gdal_memfile_napi.hpp  gdal_multi_napi.cpp  gdal_multi_napi.hpp  gdal_rasterband_napi.cpp  gdal_rasterband_napi.hpp  gdal_spatial_reference_napi.cpp  gdal_spatial_reference_napi.hpp  gdal_stubs_napi.cpp  gdal_stubs_napi.hpp  gdal_utils_napi.cpp  gdal_utils_napi.hpp  gdal_vsi_napi.cpp  gdal_vsi_napi.hpp  gdal_warper_napi.cpp  gdal_warper_napi.hpp  node_gdal.cpp
src/collections/: collections_napi.cpp  collections_napi.hpp  colortable_napi.cpp  colortable_napi.hpp  gdal_drivers_napi.cpp  gdal_drivers_napi.hpp
src/geometry/: gdal_circularstring_napi.cpp  gdal_circularstring_napi.hpp  gdal_compoundcurve_napi.cpp  gdal_compoundcurve_napi.hpp  gdal_curvebase_napi.hpp  gdal_geometry_napi.cpp  gdal_geometry_napi.hpp  gdal_geometrybase_napi.hpp  gdal_geometrycollection_napi.cpp  gdal_geometrycollection_napi.hpp  gdal_linearring_napi.cpp  gdal_linearring_napi.hpp  gdal_linestring_napi.cpp  gdal_linestring_napi.hpp  gdal_point_napi.cpp  gdal_point_napi.hpp  gdal_polygon_napi.cpp  gdal_polygon_napi.hpp  gdal_simplecurve_napi.cpp  gdal_simplecurve_napi.hpp
src/utils/: napi_object_store.hpp
test/: _common.ts  _hooks.ts  api_algebra.test.ts  api_algorithms.test.ts  api_asyncIterators.test.ts  api_base.test.ts  api_circularstring.test.ts  api_classes.test.ts  api_coordinatetransformation.test.ts  api_curve.test.ts  api_dataset.test.ts  api_drivers.test.ts  api_envelope.test.ts  api_envelope3d.test.ts  api_feature.test.ts  api_fs.test.ts  api_geometry.test.ts  api_layer.test.ts  api_layerAsync.test.ts  api_linearring.test.ts  api_linestring.test.ts  api_multidim.test.ts  api_point.test.ts  api_polygon.test.ts  api_rasterband-async.test.ts  api_rasterband.test.ts  api_spatialreference.test.ts  api_streams.test.ts  api_utils.test.ts  api_warp.test.ts  api_warpAsync.test.ts  api_wrapVRT.test.ts  object_lifetime.test.ts  open.test.ts  open_bigtiff.test.ts  open_deflate_tiff.test.ts  open_geojson.test.ts  open_gpx.test.ts  open_grib.test.ts  open_gtiff.test.ts  (+21 more)
test/utils/: file.ts
vcpkg-overlays/gdal/: portfile.cmake  vcpkg.json
